force-app/main/default/objects/Territory_Assignment__c/Territory_Assignment__c.object-meta.xml
<CustomObject>
    <label>Territory Zip Code</label>
    <nameField>
        <displayFormat>ZC-{0000}</displayFormat>
        <label>Territory Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Zip Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>