force-app/main/default/objects/Territory_Assignment__c/fields/Carrier_Territory__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Territory__c</fullName>
    <formula>Territory__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Territory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>