force-app/main/default/objects/Territory_Assignment__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <label>Zip Code</label>
    <referenceTo>Zip_Code__c</referenceTo>
    <relationshipLabel>Territory Zip Codes</relationshipLabel>
    <relationshipName>Territory_Zip_Codes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>